--- a/file/index.html
+++ b/file/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
 
-    <title>Big Shot Boxing / Играть на igroutka.ru</title>
-
+    <title>Big Shot Boxing - topVAZ</title>
+    <meta name="robots" content="noindex,nofollow" />
     <meta id="viewport" name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
