--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-		<title>Bigshot Boxing - play online at bigshotboxing.github.io</title>
+		<title>Big Shot Boxing - play online at bigshotboxing.github.io</title>
 			<link rel="icon" href="/images/favicon.png" sizes="32x32">
 		<meta name="description" content="Play iny Fishing Games for Free">
 		<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" />
@@ -97,7 +97,7 @@
 		</div>
 		<div class="game-info">
 			<div class="header-left">
-				<h1 class="single-title">Bigshot Boxing Game</h1>
+				<h1 class="single-title">Big Shot Boxing Game</h1>
 			</div>
 			<div class="header-right">
 				<div class="b-action">						
