--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 	
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LY1RXGJFNP"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LSB9RF3MP9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LY1RXGJFNP');
+  gtag('config', 'G-LSB9RF3MP9');
 </script>
 
 </head>
