--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
 		<title>Big Shot Boxing - Play online at bigshotboxing.github.io</title>
 			<link rel="icon" href="/assets/images/favicon.png" sizes="32x32">
-		<meta name="description" content="Play Big Shot Boxing online for Free - no Ads - Big Shot Boxing for ChromeBook">
+		<meta name="description" content="Big Shot Boxing: Safe and free kids' game. Step into the ring, no ads. Swing for glory in this exciting boxing simulation. Play now!">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
 		<!-- <link rel="stylesheet" type="text/css" href="assets/css/jquery-comments.css" /> -->
 		<!-- <link rel="stylesheet" type="text/css" href="assets/css/user.css" /> -->
@@ -36,6 +36,9 @@
   gtag('config', 'G-LSB9RF3MP9');
 </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6908591112440966"
+     crossorigin="anonymous"></script>
+     
 
 </head>
 
@@ -48,7 +51,7 @@
 				</button>
 				<a class="navbar-brand js-scroll-trigger" href="/"><span class="site-logo" alt="site-logo"><strong>	
 									<!-- <img src="/assets/images/topvaz_logo.png" alt="topVAZ Games logo" width="70" height="35"> -->
-				bigshotboxing.github.io
+				Bigshotboxing.github.io
 				</strong> </span></a>
 
 				<div class="navbar-collapse collapse" id="nav-menu">
