--- a/minesweeper.html
+++ b/minesweeper.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
     <title>Minesweeper</title>
+    <meta name="robots" content="noindex,nofollow" />
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -36,9 +37,6 @@
   gtag('config', 'G-LSB9RF3MP9');
 </script>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6908591112440966"
-     crossorigin="anonymous"></script>
-     
 </head>
 
   <body id="page-top">
