--- a/8-ball-pool.html
+++ b/8-ball-pool.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
     <title>8 Ball Pool</title>
-    <meta name="robots" content="noindex,nofollow" />
+    <meta name="description" content="8 Ball Pool: Immerse in ad-free, fullscreen billiards action! Pot balls, challenge opponents, and enjoy free, ultimate pool gaming now!">
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -37,6 +37,10 @@
   gtag('config', 'G-LSB9RF3MP9');
 </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6908591112440966"
+     crossorigin="anonymous"></script>
+
+     
 </head>
 
   <body id="page-top">
