--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
 
 			</div>
 		</div>
-	</div>
 </div>
 
 
@@ -107,9 +106,42 @@
 <div class="container">
 
 
-<!-- 	<div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px 0; text-align: center;"><img src="https://cdn.redfoc.com/img/banner-1.png" alt="banner"></div>
-	</div>	
- -->
+<div class="content-wrapper">
+
+<div class="row">
+<h1>Experience the Thrill of Big Shot Boxing Game</h1>
+
+<p>Step into the virtual ring with Big Shot Boxing, an electrifying online game that lets you unleash your boxing skills right from your Chrome computer browser. Whether you're taking a break at school or looking for a fun challenge, this game delivers a healthy and engaging gameplay experience that enhances your reflexes.</p>
+
+<h2>Game Instructions</h2>
+
+<p>Big Shot Boxing offers a simple yet exciting control scheme. Use the <strong>right arrow key</strong> for a swift jab, the <strong>left arrow key</strong> to deliver a powerful cross, and <strong>X</strong> to unleash a knockout uppercut. To defend yourself, press <strong>Z</strong> to block incoming strikes. Master these moves and combine them strategically to dominate your opponents in the ring.</p>
+
+<h2>Play Distraction-Free</h2>
+
+<p>Say goodbye to interruptions! Big Shot Boxing provides a seamless gaming experience with no ads to disrupt your focus. If you want to immerse yourself fully, simply hit the fullscreen button and enjoy the game without any distractions. This feature ensures that you're completely engaged in the boxing action.</p>
+
+<h2>Optimized for Chromebook Laptops</h2>
+
+<p>Whether you're using a school computer or a Chromebook laptop, Big Shot Boxing performs exceptionally well. Access the game through your Chrome browser, and you're ready to showcase your boxing prowess. This compatibility makes it convenient to enjoy the game, connecting with friends and fellow students in the virtual boxing arena.</p>
+
+<h2>Embrace the Challenge</h2>
+
+<p>Big Shot Boxing isn't just about fun – it's also a fantastic way to enhance your reflexes and coordination. Engage in friendly matches with your classmates or challenge opponents from different schools in the online multiplayer mode. Embrace the challenge, refine your skills, and build lasting memories in a safe gaming environment.</p>
+
+<h2>Conclusion</h2>
+
+<p>Big Shot Boxing is a must-play game for students seeking a healthy and thrilling gaming experience. Its intuitive controls, compatibility with Chromebook laptops, and ad-free environment ensure that you can focus on honing your boxing techniques and reflexes. So, gear up, step into the virtual ring, and show off your boxing prowess!</p>
+
+
+</div>
+
+
+
+
+
+
+
 
 
 	<div class="content-wrapper">
