--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="header-right">
 				<div class="b-action">						
 						
-						<a href="#" onclick="open_fullscreen()" class="btn btn-capsule"><i class="bi bi-arrows-fullscreen b-icon"></i>Fullscreen</a>
+						<a href="#" onclick="open_fullscreen()" class="btn btn-capsule">Fullscreen</a>
 					</div>
 
 			</div>
@@ -106,9 +106,9 @@
 <div class="container">
 
 
-<div class="content-wrapper">
+<div class="content-wrapper ">
 
-<div class="row">
+<div class="row game-info">
 <h1>Experience the Thrill of Big Shot Boxing Game</h1>
 
 <p>Step into the virtual ring with Big Shot Boxing, an electrifying online game that lets you unleash your boxing skills right from your Chrome computer browser. Whether you're taking a break at school or looking for a fun challenge, this game delivers a healthy and engaging gameplay experience that enhances your reflexes.</p>
@@ -125,13 +125,7 @@
 
 <p>Whether you're using a school computer or a Chromebook laptop, Big Shot Boxing performs exceptionally well. Access the game through your Chrome browser, and you're ready to showcase your boxing prowess. This compatibility makes it convenient to enjoy the game, connecting with friends and fellow students in the virtual boxing arena.</p>
 
-<h2>Embrace the Challenge</h2>
 
-<p>Big Shot Boxing isn't just about fun – it's also a fantastic way to enhance your reflexes and coordination. Engage in friendly matches with your classmates or challenge opponents from different schools in the online multiplayer mode. Embrace the challenge, refine your skills, and build lasting memories in a safe gaming environment.</p>
-
-<h2>Conclusion</h2>
-
-<p>Big Shot Boxing is a must-play game for students seeking a healthy and thrilling gaming experience. Its intuitive controls, compatibility with Chromebook laptops, and ad-free environment ensure that you can focus on honing your boxing techniques and reflexes. So, gear up, step into the virtual ring, and show off your boxing prowess!</p>
 
 
 </div>
