--- a/index.html
+++ b/index.html
@@ -78,27 +78,48 @@
 
 <div align="center" class="container game-wrapper">
 
-		<div  class="game-content" data-id="211">
-			<div  class="game-iframe-container" id="game-player">
-				<div id="mobile-back-button" draggable="true">
-					<i class="bi bi-x-circle-fill"></i>
-				</div>
-				<iframe id="game-area" style="width: 840px; height: 560px;"  src="https://topvazstore.github.io/g2/big-shot-boxing/" crolling="none" frameborder="0" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="game-info">
-			<div class="header-left">
-				<h1 class="single-title">Big Shot Boxing </h1>
-			</div>
-			<div class="header-right">
-				<div class="b-action">						
-						
-						<a href="#" onclick="open_fullscreen()" class="btn btn-capsule">Fullscreen</a>
-					</div>
 
-			</div>
-		</div>
+<div class="game-container">
+    <div class="game-content" data-id="211">
+      <div id="allow_mobile_version"></div>     <div id="mobile-play" style="display: none;">
+        <div class="mobile-thumb-play">
+          <img src="/games/tennis/thumb_1.jpg">
+        </div>
+        <div id="mobile-play-btn">
+          <i class="bi bi-play-circle-fill"></i>
+        </div>
+      </div>
+      <div class="game-iframe-container" id="game-player">
+        <div id="mobile-back-button" draggable="true">
+          <i class="bi bi-x-circle-fill"></i>
+        </div>
+        <iframe class="game-iframe" id="game-area" src="https://topvazstore.github.io/g2/big-shot-boxing/" width="840" height="560" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+      </div>
+    </div>
+    <div class="game-info">
+      <div class="header-left">
+        <h1 class="single-title">Big Shot Boxing</h1>
+  
+      </div>
+      <div class="header-right">
+
+        <div class="b-action2">
+    
+          <a href="#" onclick="open_fullscreen()" class="btn btn-capsule">Fullscreen</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
 </div>
+
+
 
 
 
@@ -108,7 +129,7 @@
 
 <div class="content-wrapper ">
 
-<div class="row game-info">
+<div class="row">
 <h1>Experience the Thrill of Big Shot Boxing Game</h1>
 
 <p>Step into the virtual ring with Big Shot Boxing, an electrifying online game that lets you unleash your boxing skills right from your Chrome computer browser. Whether you're taking a break at school or looking for a fun challenge, this game delivers a healthy and engaging gameplay experience that enhances your reflexes.</p>
@@ -611,7 +632,7 @@
 
 </div> <!-- end content-wrapper -->
 
-
+</div>
 
 <!-- 
 
