--- a/popular.html
+++ b/popular.html
@@ -109,7 +109,7 @@
 				<div class="sidebar">
 
 					<div class="widget">
-						<h4 class="widget-title">Sports Games</h4>
+						<h4 class="widget-title">Popular Games</h4>
 						<div class="row gamelist-widget">	
 
 						
