--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
        
         
                 <div class="col-2 list-grid">
-                  <a title="Tetris" href="/tetris.html">
+                  <a title="Tetris" href="/tetris/?lan=en">
                     <div class="list-game">
                       <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/tetris.png" class="small-thumb img-rounded" alt="Tetris"></div>
                     </div>
