--- a/puzzle.html
+++ b/puzzle.html
@@ -216,7 +216,7 @@
        
         
                 <div class="col-2 list-grid">
-                  <a title="Apple Worm" href="/apple-worm">
+                  <a title="Apple Worm" href="/apple-worm/">
                     <div class="list-game">
                       <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/apple-worm.png" class="small-thumb img-rounded" alt="Apple Worm"></div>
                     </div>
