--- a/dmca.html
+++ b/dmca.html
@@ -9,7 +9,7 @@
 		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-		<title>Terms of Use</title>
+		<title>DMCA</title>
 			<link rel="icon" href="/assets/images/favicon.png" sizes="32x32">
 		<meta name="description" content="Play Soccer Random online for Free - no Ads - Soccer Random for ChromeBook">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -100,7 +100,7 @@
 <div class="flex flex-col w-full max-w-7xl">
                         <h1 class="text-base md:text-lg 2xl:text-xl font-semibold tracking-tight italic">Last Updated: 
                         <!-- -->
-                        August 18, 2023</h1>
+                        August 23, 2023</h1>
                         <p class="pb-4">bigshotboxing.github.io
                         <!-- -->
                         (the &quot;Site &quot;) respects the intellectual property rights of others and expects its users to do the same. In accordance with the Digital Millennium Copyright Act of 1998, the text of which may be found on the U.S. Copyright Office website at http://www.copyright.gov/legislation/dmca.pdf, and specifically in accordance with 17 USC § 512(c)(3), 
