--- a/policy.html
+++ b/policy.html
@@ -9,7 +9,7 @@
 		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-		<title>Terms of Use</title>
+		<title>PRIVACY POLICY</title>
 			<link rel="icon" href="/assets/images/favicon.png" sizes="32x32">
 		<meta name="description" content="Play Soccer Random online for Free - no Ads - Soccer Random for ChromeBook">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -100,7 +100,7 @@
  <div class="flex flex-col w-full max-w-7xl">
                         <h1 class="text-base md:text-lg 2xl:text-xl font-semibold tracking-tight italic">Last Updated: 
                         <!-- -->
-                        August 18, 2023</h1>
+                        August 23, 2023</h1>
                         <p class="pb-4">At 
                         <!-- -->
                         bigshotboxing.github.io
