--- a/slope.html
+++ b/slope.html
@@ -133,7 +133,7 @@
 
 <h2>Related Games: Slope 2 and More</h2>
 
-<p>If you're looking for a similar but slightly easier challenge, consider trying out Slope 2. With gameplay reminiscent of the original Slope, Slope 2 offers a more gradual learning curve, making it a great option for players seeking a less intense experience. Additionally, explore related games such as Run 3, Slope 3, and Vex 7, each offering their unique twists and challenges while maintaining the excitement and healthy gameplay of the Slope series.</p>
+<p>If you're looking for a similar but slightly easier challenge, consider trying out <a href='https://bigshotboxing.github.io/slope-2-multiplayer.html'>Slope 2</a>. With gameplay reminiscent of the original Slope, Slope 2 offers a more gradual learning curve, making it a great option for players seeking a less intense experience. Additionally, explore related games such as Run 3, Slope 3, and Vex 7, each offering their unique twists and challenges while maintaining the excitement and healthy gameplay of the Slope series.</p>
 
 <h2>Healthy Play, Sharpened Reflexes</h2>
 
