--- a/basket-random.html
+++ b/basket-random.html
@@ -114,28 +114,26 @@
     </div>
 
   <div class="row">
-<p>Welcome to the world of <strong>Basket Random</strong> – the ultimate online game that guarantees endless laughter and excitement! The best part? You don't need to download anything, endure pesky ads, or deal with any interruptions. This game offers pure, unadulterated fun, right in your Chrome computer browser. It's a fantastic way to enjoy your free time and unwind with friends.</p>
+    <h1>Experience Fun with Basket Random Game</h1>
 
-<h2>Unmatched Entertainment with Friends</h2>
-<p>Are you ready to dive into a gaming experience that's both fun and downright hilarious? Playing with friends amplifies the excitement and takes the hilarity to a whole new level. It's the perfect entertainment for both gatherings and family game nights.</p>
+<p>Indulge in the joy of Basket Random, a fantastic and hilarious game that requires no downloads and is completely ad-free, ensuring an uninterrupted gaming experience. With a captivating full-screen mode, this game is a delightful and amusing choice to enjoy with your friends. The unique snow map adds an extra layer of humor, and the experience of playing with friends elevates the fun to a whole new level. Whether played with friends or family, Basket Random offers endless entertainment and excitement.</p>
 
-<h2>Easy Gameplay</h2>
+<h2>Game Instructions</h2>
 
-    <h3>1 Player Mode</h3>
-    <p>If you're playing alone, all you need is the <strong>up arrow key</strong> on your keyboard. Use this key to control your player's movements and aim for that perfect shot. It's as simple as that! Keep practicing to improve your skills and set new high scores.</p>
-
-    <h3>2 Players Mode</h3>
-    <p>Want to challenge a friend in a head-to-head match? In the 2 players mode, one player uses the <strong>up arrow key</strong> just like in 1 player mode. The second player will use the <strong>w key</strong> to control their player's movements. Compete against each other to see who can score the most baskets and claim victory!</p>
-
-
+<p>For solo play, use the up arrow key to control your player. To play with a friend, add the "w" key to control the second player. If you're playing on a touch screen device, interact by touching the screen. Hold your finger on the screen to grasp the basketball and release to shoot. Moving your basketball player is as simple as swiping the screen; swipe right or left to move accordingly. The game's versatility extends to computers, laptops, and tablets with touch screens, ensuring kids stay entertained while limiting phone usage.</p>
 
 <h2>Immersive Fullscreen Mode</h2>
-<p>Get ready to be fully immersed in the world of Basket Random with its fullscreen mode. The fullscreen mode not only enhances the visual experience but also draws you into the game's unpredictable and exciting gameplay. Feel the excitement as you aim for that perfect shot while enjoying every moment on your larger computer screen. It's the closest you can get to feeling like you're right there on the court!</p>
 
-<h2>Discover More Fun</h2>
-<p>If you're looking for similar games to enjoy with your friends and family, look no further. Basket Random's sibling games like Volley Random and Soccer Random offer equally entertaining experiences. You can create a mini-tournament of wacky games and have a blast competing against each other. The fun never ends!</p>
+<p>Enhance your gaming adventure with the fullscreen mode, designed to provide an immersive experience without any distractions. Whether you're facing off against your friends or challenging yourself to beat your own records, the fullscreen mode ensures that you're completely engaged in the game, maximizing the fun and excitement.</p>
 
-<p>In conclusion, Basket Random is an incredible game that's perfect for Chrome computer browser users seeking light-hearted entertainment. With its easy controls, fullscreen mode, and related games, it provides endless hours of laughter and bonding with friends and family. Say goodbye to boredom and hello to the joy of Basket Random!</p>
+<h2>Related Games: More Fun with Friends</h2>
+
+<p>If you're on the lookout for more enjoyable games to play with friends and family, consider exploring related titles like Volley Random and Soccer Random. These games offer similar fun and excitement, making them perfect choices for group gatherings and friendly competitions.</p>
+
+<h2>Healthy Play, Wholesome Entertainment</h2>
+
+<p>Basket Random not only delivers fun but also fosters healthy gameplay habits. With its easy controls and engaging mechanics, the game provides a platform for players to relax, laugh, and sharpen their reflexes. The absence of ads ensures an uninterrupted and safe gaming experience, making Basket Random a fantastic choice for players of all ages.</p>
+
 
 
 
