--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<div class="sidebar">
 
 					<div class="widget">
-						<h4 class="widget-title">Popular Games</h4>
+						<h4 class="widget-title">You might also Like</h4>
 						<div class="row gamelist-widget">	
 
 						
