--- a/apple-worm.html
+++ b/apple-worm.html
@@ -9,8 +9,8 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-    <title>Aqua Thrills</title>
-    <meta name="description" content="Play Aqua Thrills ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
+    <title>Apple Worm</title>
+    <meta name="description" content="Play Apple Worm ad-free and full-screen on ChromeBook/Laptop. Enjoy instant browser gaming without any installation hassle. Play now!">    
     <meta name="robots" content="noindex,nofollow" />
       <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
@@ -92,12 +92,12 @@
         <div id="mobile-back-button" draggable="true">
           <i class="bi bi-x-circle-fill"></i>
         </div>
-        <iframe id="game-area" style="width: 840px; height: 560px;" src="https://topvazstore.github.io/g2/aqua-thrills" crolling="none" frameborder="0" allowfullscreen></iframe>
+        <iframe id="game-area" style="width: 840px; height: 560px;" src="https://topvazstore.github.io/g/apple-worm" crolling="none" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="game-info">
       <div class="header-left">
-        <h1 class="single-title">Aqua Thrills</h1>
+        <h1 class="single-title">Apple Worm</h1>
       </div>
       <div class="header-right">
         <div class="b-action">            
