--- a/8-ball-pool.html
+++ b/8-ball-pool.html
@@ -120,9 +120,39 @@
 
 
   <div class="content-wrapper">
+
+
+<div class="row">
+
+<h1>Experience Classic Billiards with 8 Ball Pool Game</h1>
+
+<p>Step into the world of classic billiards and enjoy the captivating 8 Ball Pool game, tailor-made for a seamless experience on your Chrome computer browser. This immersive game offers a healthy way to have fun while enhancing your reflexes and strategic thinking. What's more, parents can rest assured, as this game provides a safe environment without any harmful content, making it suitable for players of all ages.</p>
+
+<h2>Game Instructions</h2>
+
+<p>Delve into the thrill of billiards with ease using the intuitive mouse controls of 8 Ball Pool. Adjust your aim and shot power by simply moving your mouse, as you strategically pot the striped or solid-colored balls. The ultimate objective? Skillfully sink the 8-ball to secure victory. With its user-friendly controls, the game offers accessibility to both beginners and experienced players.</p>
+
+<h2>Immersive Fullscreen Mode</h2>
+
+<p>Enhance your gaming experience with the immersive fullscreen mode. This feature is designed to provide an unobstructed view, allowing you to focus solely on your shots and strategies. The fullscreen mode enhances visibility, ensuring you can see the ball much more clearly than in the non-fullscreen game mode. Immerse yourself fully in the billiards action!</p>
+
+<h2>Optimized for Chromebook Laptops</h2>
+
+<p>Whether you're using a school computer or a Chromebook laptop, 8 Ball Pool runs seamlessly on the Chrome browser. This compatibility ensures that you can enjoy a game of billiards whenever you're connected to the internet. Compete against friends, showcasing your skills and tactics.</p>
+
+<h2>Healthy Play, Sharpened Reflexes</h2>
+
+<p>Embrace the joy of healthy gaming that not only entertains but also sharpens your reflexes and strategic thinking. The dynamic nature of 8 Ball Pool encourages quick decision-making and precise execution, providing a platform for skill development in a fun and engaging manner.</p>
+
+
+  </div>
+
+
     
   <div style="padding-bottom: 20px"  align="center">
     </div>
+
+
 
   <div class="row">
 
