--- a/basket-random.html
+++ b/basket-random.html
@@ -120,11 +120,34 @@
 
 
   <div class="content-wrapper">
-    
+  <div class="row"> 
+
+<p>Indulge in the joy of Basket Random, a fantastic and hilarious game that requires no downloads and is completely ad-free, ensuring an uninterrupted gaming experience. With a captivating full-screen mode, this game is a delightful and amusing choice to enjoy with your friends. The unique snow map adds an extra layer of humor, and the experience of playing with friends elevates the fun to a whole new level. Whether played with friends or family, Basket Random offers endless entertainment and excitement.</p>
+
+<h2>Game Instructions</h2>
+
+<p>For solo play, use the up arrow key to control your player. To play with a friend, add the <strong>"W"</strong> key to control the second player. If you're playing on a touch screen device, interact by touching the screen. Hold your finger on the screen to grasp the basketball and release to shoot. Moving your basketball player is as simple as swiping the screen; swipe right or left to move accordingly. The game's versatility extends to computers, laptops, and tablets with touch screens, ensuring kids stay entertained while limiting phone usage.</p>
+
+<h2>Immersive Fullscreen Mode</h2>
+
+<p>Enhance your gaming adventure with the fullscreen mode, designed to provide an immersive experience without any distractions. Whether you're facing off against your friends or challenging yourself to beat your own records, the fullscreen mode ensures that you're completely engaged in the game, maximizing the fun and excitement.</p>
+
+<h2>Related Games: More Fun with Friends</h2>
+
+<p>If you're on the lookout for more enjoyable games to play with friends and family, consider exploring related titles like Volley Random and Soccer Random. These games offer similar fun and excitement, making them perfect choices for group gatherings and friendly competitions.</p>
+
+<h2>Healthy Play, Wholesome Entertainment</h2>
+
+<p>Basket Random not only delivers fun but also fosters healthy gameplay habits. With its easy controls and engaging mechanics, the game provides a platform for players to relax, laugh, and sharpen their reflexes. The absence of ads ensures an uninterrupted and safe gaming experience, making Basket Random a fantastic choice for players of all ages.</p>
+
+
+  </div> 
   <div style="padding-bottom: 20px"  align="center">
     </div>
 
-  <div class="row">
+  
+
+    <div class="row">
 
       
 
