--- a/boxing-random.html
+++ b/boxing-random.html
@@ -120,6 +120,33 @@
 
 
   <div class="content-wrapper">
+
+  <div class="row">
+<h1>Experience the Thrill of Boxing Random Game</h1>
+
+<p>Step into the virtual ring and unleash your boxing skills with the exhilarating Boxing Random game, specially designed for seamless play on your Chrome computer browser. This game doesn't just offer excitement; it also provides a healthy gaming experience that enhances reflexes and critical thinking. Parents can have peace of mind as the game is entirely free from harmful content and distracting ads, ensuring a safe and enjoyable environment for players of all ages.</p>
+
+<h2>Game Instructions</h2>
+
+<p>Immerse yourself in the world of boxing using simple mouse controls to navigate the intense Boxing Random game. Engage in fast-paced matches, utilizing quick reflexes and strategic punches to outsmart your opponent and claim victory. With its intuitive controls, the game welcomes players of all skill levels, making it easy to jump into thrilling boxing matches and refine your tactics.</p>
+
+<h2>Immersive Fullscreen Mode</h2>
+
+<p>Maximize your gaming experience with the immersive fullscreen mode, offering an unobstructed view of the action. This mode not only enhances your solo play but also makes it incredibly convenient to enjoy the game with friends. Whether you're competing against each other or collaborating on exciting matches, the fullscreen mode ensures that you're fully engaged in the boxing action.</p>
+
+<h2>Optimized for Chromebook Laptops</h2>
+
+<p>Experience the excitement of Boxing Random whether you're on a school computer or a Chromebook laptop, as the game runs seamlessly on the Chrome browser. This compatibility means you can engage in intense boxing bouts whenever you're connected to the internet. Challenge your classmates, friends, or even opponents from around the world, showcasing your boxing skills and strategic prowess.</p>
+
+<h2>Related Game: Big Shot Boxing and More</h2>
+
+<p>If you're looking for more boxing action, check out Big Shot Boxing. Additionally, explore related games like Basket Random and Volley Random, offering diverse and enjoyable 2-player experiences. These games are perfect for friendly competitions and cooperative play, providing a variety of sports-themed challenges for you and your friends.</p>
+
+<h2>Healthy Play, Enhanced Reflexes</h2>
+
+<p>Embrace the excitement of Boxing Random, a game that not only entertains but also sharpens your reflexes and strategic thinking. The dynamic nature of the game demands quick decision-making and precise execution, creating an engaging platform for skill development in an entertaining and wholesome manner.</p>
+
+  </div>
     
   <div style="padding-bottom: 20px"  align="center">
     </div>
