--- a/puzzle.html
+++ b/puzzle.html
@@ -386,8 +386,8 @@
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			bigshotboxing.github.io			<span class="dsb-panel">
-				topVAZ			</span>
+			Bigshotboxing.github.io			<span class="dsb-panel">
+				<a href="term.html">Term</a> - <a href="dmca.html">DMCA</a> - <a href="policy.html">Policy</a>      </span>
 		</div>
 	</div>
 	<script type="text/javascript" src="/assets/js/jquery-3.6.2.min.js"></script>
