--- a/rocket-soccer-derby.html
+++ b/rocket-soccer-derby.html
@@ -120,6 +120,20 @@
 
 
   <div class="content-wrapper">
+
+  <div class="row">
+
+<h2>Blast into Action</h2>
+<p>If you're looking for an exciting online game that requires no downloads, zero ads, and promises hours of entertainment, Rocket Soccer Derby is your go-to choice. This action-packed game takes soccer to a whole new level with rockets and cars. Get ready for a thrilling experience that's safe and enjoyable for players of all ages.</p>
+<h2>Master the Controls</h2>
+<p>Getting the hang of Rocket Soccer Derby is a breeze. All you need is your trusty keyboard's arrow keys. These simple controls allow you to navigate your rocket-powered car across the field with precision. Whether you're dribbling the ball, boosting toward the goal, or defending against opponents, the intuitive controls make gameplay smooth and engaging.</p>
+<h2>Immersive Fullscreen Mode</h2>
+<p>For an even more immersive experience, Rocket Soccer Derby offers a fullscreen mode that's perfect for gaming enthusiasts. Engage in intense matches with the entire screen dedicated to the game, eliminating distractions and letting you dive into the action headfirst. The stunning graphics and dynamic gameplay truly shine when you play in fullscreen mode.</p>
+<h2>Discover Related Games</h2>
+<p>If you're a soccer fan eager for more gaming adventures, check out the related game called Soccer Skills Champions League. It's tailor-made for football enthusiasts seeking a different kind of challenge. Additionally, if you're in the mood for diverse gaming experiences, Burnin' Rubber 5 Xs is another game you'll find appealing. Rocket Soccer Derby's parent company offers a range of titles suitable for various tastes.</p>
+<p>With Rocket Soccer Derby, you're in for a treat – an ad-free and exhilarating gaming experience right in your Chrome computer browser. From mastering the controls to exploring fullscreen mode, this game keeps you engaged and entertained. And don't forget to explore related games for more excitement. Get ready to rocket into action!</p>
+
+  </div>
     
   <div style="padding-bottom: 20px"  align="center">
     </div>
