--- a/vex-7.html
+++ b/vex-7.html
@@ -123,19 +123,30 @@
     
   <div class="row">
 
-<h2>Blast into Action</h2>
-<p>If you're looking for an exciting online game that requires no downloads, zero ads, and promises hours of entertainment, Rocket Soccer Derby is your go-to choice. This action-packed game takes soccer to a whole new level with rockets and cars. Get ready for a thrilling experience that's safe and enjoyable for players of all ages.</p>
-<h2>Master the Controls</h2>
-<p>Getting the hang of Rocket Soccer Derby is a breeze. All you need is your trusty keyboard's arrow keys. These simple controls allow you to navigate your rocket-powered car across the field with precision. Whether you're dribbling the ball, boosting toward the goal, or defending against opponents, the intuitive controls make gameplay smooth and engaging.</p>
+
+
+<p>Experience the excitement of the Vex 7 game, expertly designed for flawless performance on your Chrome computer browser. Beyond the thrills, this game offers a wholesome gaming experience that promotes skill development and critical thinking. Parents can have peace of mind as the game is entirely free from harmful content and bothersome ads, creating a secure and enjoyable environment for young players.</p>
+
+<h2>Game Instructions</h2>
+
+<p>Engage in the immersive world of Vex 7 using intuitive arrow key controls. Navigate through intricate levels, utilizing agility and strategic planning to conquer various obstacles and challenges. The game's user-friendly controls ensure players of all ages and skill levels can join the adventure, providing an inclusive gaming experience that sharpens reflexes and fosters creative problem-solving.</p>
+
 <h2>Immersive Fullscreen Mode</h2>
-<p>For an even more immersive experience, Rocket Soccer Derby offers a fullscreen mode that's perfect for gaming enthusiasts. Engage in intense matches with the entire screen dedicated to the game, eliminating distractions and letting you dive into the action headfirst. The stunning graphics and dynamic gameplay truly shine when you play in fullscreen mode.</p>
-<h2>Discover Related Games</h2>
-<p>If you're a soccer fan eager for more gaming adventures, check out the related game called Soccer Skills Champions League. It's tailor-made for football enthusiasts seeking a different kind of challenge. Additionally, if you're in the mood for diverse gaming experiences, Burnin' Rubber 5 Xs is another game you'll find appealing. Rocket Soccer Derby's parent company offers a range of titles suitable for various tastes.</p>
-<p>With Rocket Soccer Derby, you're in for a treat – an ad-free and exhilarating gaming experience right in your Chrome computer browser. From mastering the controls to exploring fullscreen mode, this game keeps you engaged and entertained. And don't forget to explore related games for more excitement. Get ready to rocket into action!</p>
+
+<p>Elevate your gaming journey with the fullscreen mode, specially crafted to enhance the gameplay experience. This feature not only maximizes individual enjoyment but also makes it perfect for inviting friends to join in the fun. Whether competing or collaborating, the fullscreen mode offers an unobstructed view, enabling strategic engagement and making the game even more thrilling.</p>
+
+<h2>Related Games: Vex Series and More</h2>
+
+<p>If you're hungry for more challenges and adventures, dive into the Vex series, encompassing titles like Vex 3, 4, 5, and 6. Each iteration brings its own unique levels and obstacles, ensuring an array of engaging experiences. Additionally, explore other captivating games such as Slope and Slope 2, delivering exciting opportunities for both solo and cooperative play.</p>
+
+<h2>Healthy Play, Skill Enhancement</h2>
+
+<p>Step into the world of Vex 7, a game that not only entertains but also hones your skills and cognitive abilities. The dynamic challenges of the game necessitate quick decision-making and precise execution, fostering growth and refining reflexes in an enjoyable and educational manner.</p>
+
 
   </div>
 
-  
+
   <div style="padding-bottom: 20px"  align="center">
     </div>
 
