--- a/vex-5.html
+++ b/vex-5.html
@@ -120,7 +120,8 @@
 
 
   <div class="content-wrapper">
-    
+  <div class="row">
+  </div>  
   <div style="padding-bottom: 20px"  align="center">
     </div>
 
